--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -288,11 +288,13 @@ footer span {
  
   <span>webApp</span>
     <div class="spacer"></div>
-    <a aria-label="Inicio" target="_blank" rel="noopener" href="https://twitter.com/angular" title="Inicio">
+    <a aria-label="Inicio" rel="noopener" routerLink="/" title="Inicio">
       Inicio
     </a>
-    <a aria-label="Tienda" target="_blank" rel="noopener" href="https://youtube.com/angular" title="Tienda">Tienda
+
+    <a aria-label="Tienda" target="_blank" rel="noopener" routerLink="add"  title="Tienda">Tienda
     </a>
+  
 </div>
 
 <div class="content" role="main">
